# Financeer

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/: README  env.py  script.py.mako
backend/app/alembic/versions/: 1bab8d579d8c_add_users_table.py  405d9851c541_add_balance_model.py  4c1f036946c2_add_plaiditem.py  57771956bc1e_added_transaction_references.py  6a1c187359ec_separate_expenses_and_transfers.py  6fcb14524757_improve_transfer_model.py  88d7c3f882ce_initialize_schema.py  94de0cde84cc_initialize_schema.py  967c681dfc46_add_more_plaid_integrations.py  ac29bd5c01cd_separate_to_and_from_transactions_for_.py  b519e10b3c3c_remove_account_from_expenses.py  bc98ec03b28c_add_transaction_filters_to_incomes.py  d4dfe94091b5_create_expense_group_table.py  f4839eedaa65_create_budget_table.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  account.py  auth.py  (+13 more)
backend/app/core/: auth.py  balance.py  config.py  dates.py  expenses.py  plaid.py  transactions.py  upload.py
backend/app/db/: base.py  migrate.py  query.py  test.py
backend/app/models/: __init__.py  account.py  balance.py  bill.py  budget.py  expense.py  expense_group.py  income.py  plaid.py  transaction.py  transfer.py  upload.py  user.py
backend/app/schemas/: account.py  balance.py  bill.py  budget.py  cashflow.py  core.py  expense.py  income.py  plaid.py  transaction.py  transfers.py
backend/app/services/: apple.py  capital_one.py  chase.py  citi.py  iccu.py  plaid.py  vanguard.py
backend/app/utils/: logging.py
(+115 files in other folders)
