[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy==2.0.40",
    "alembic==1.15.2",
    "sqlalchemy-utils==0.41.2",
    "fastapi==0.115.12",
    "loguru==0.7.3",
    "rich==14.0.0",
    "uvicorn==0.34.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.20",
    "pandas==2.2.3",
    "fastapi-pagination==0.13.1",
    "plaid-python==32.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "app",
]
